@@ -1,4 +1,10 @@
+2005-07-10  David Hill <dbhill@email.unc.edu>
+
+	* Added batch_msd2pt to more quickly get thru 2pt rheology calculations
+
 2004-08-31  David Hill <dbhill@email.unc.edu>
 
 	* Initial Version of Mean Squared Displacement Code
+
+
 
